--- a/tasks/beats-debian.yml
+++ b/tasks/beats-debian.yml
@@ -48,6 +48,7 @@
 - name: Debian - add beats repository
   become: yes
   apt_repository:
+    filename: "{{ repo_filename }}"
     repo: "deb {{ repo_url }} stable main"
     state: present
   register: repo_install
