--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,3 +1,4 @@
 ---
 default_file: "/etc/default"
 repo_url: "https://artifacts.elastic.co/packages/{{ beats_major_version }}/apt"
+repo_filename: artifacts_elastic_co_packages_{{ beats_major_version }}_apt
